<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="10sp">

    <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:hint="@string/email"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="20sp"
        android:singleLine="true"
        android:inputType="textEmailAddress"
        android:linksClickable="false"/>

    <EditText
        android:id="@+id/password"
        android:textColor="@color/black"
        android:layout_width="fill_parent"
        android:hint="@string/password"
        android:textColorHint="@color/black"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:singleLine="true"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/limegreen"
        android:layout_marginTop="10sp"
        android:text="@string/signin" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="fill_parent"
        android:background="@color/lightblue"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/register" />



</LinearLayout>
    <!-- Login Form Ends -->