<ScrollView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">
    <!-- A CardView that contains a TextView -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/food_card_view"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="90sp"
            card_view:cardElevation="@dimen/cardview_default_elevation"
            card_view:cardBackgroundColor="@color/food"
            card_view:cardCornerRadius="2dp">

            <TextView
                android:id="@+id/food_header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:background="@color/food"
                android:layout_gravity="top"
                android:text="@string/food"
                android:fontFamily="Roboto"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:gravity="center_vertical|center" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/sport_card_view"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="90sp"
            card_view:cardElevation="@dimen/cardview_default_elevation">

            <TextView
                android:id="@+id/sport_header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:background="@color/sport"
                android:layout_gravity="top"
                android:textSize="30sp"
                android:text="@string/sport"
                android:fontFamily="Roboto"
                android:textColor="@color/white"
                android:gravity="center_vertical|center" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:id="@+id/teaching_card_view"
            android:layout_gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="90sp"
            card_view:cardElevation="@dimen/cardview_default_elevation">

            <TextView
                android:id="@+id/teaching_header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:background="@color/teaching"
                android:layout_gravity="top"
                android:textSize="30sp"
                android:text="@string/teaching"
                android:fontFamily="Roboto"
                android:textColor="@color/white"
                android:gravity="center_vertical|center" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/movie_card_view"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="90sp"
            card_view:cardElevation="@dimen/cardview_default_elevation">

            <TextView
                android:id="@+id/movie_header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:background="@color/movie"
                android:layout_gravity="top"
                android:textSize="30sp"
                android:text="@string/movie"
                android:fontFamily="Roboto"
                android:textColor="@color/white"
                android:gravity="center_vertical|center" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/theater_card_view"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:layout_gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="90sp"
            card_view:cardElevation="@dimen/cardview_default_elevation">

            <TextView
                android:id="@+id/theater_header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:background="@color/theater"
                android:layout_gravity="top"
                android:textSize="30sp"
                android:text="@string/theater"
                android:fontFamily="Roboto"
                android:textColor="@color/white"
                android:gravity="center_vertical|center" />
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>
