<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_marginStart="12dp"
    android:layout_marginTop="6dp"
    android:layout_marginBottom="6dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="12dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="@color/light">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="16dp"
                android:src="@drawable/peng"
                app:border_width="1dp"
                app:border_color="@color/lightblue" />

            <TextView
                android:id="@+id/title"
                android:layout_toEndOf="@id/avatar"
                android:layout_width="match_parent"
                android:layout_marginTop="12dp"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:text="@string/event" />

            <TextView
                android:id="@+id/creator"
                android:layout_below="@id/title"
                android:layout_toEndOf="@id/avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="14sp"
                android:textColor="@color/subtitle"
                android:text="Varnavsky" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">

            <TextView
                android:id="@+id/descriptiontitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                android:text="@string/descriptiontitle" />

            <TextView
                android:id="@+id/description"
                android:layout_below="@id/descriptiontitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="28dp"
                android:textColor="@color/black"
                android:text="Some description"/>

            <TextView
                android:id="@+id/memberstitle"
                android:layout_below="@id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/black"
                android:text="@string/memberstitle" />

            <TextView
                android:id="@+id/members"
                android:layout_below="@id/memberstitle"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="warlen94@mail.ru\nsigorilla@mail.com"
                android:textColor="@color/black"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.gc.materialdesign.views.ButtonFlat
                android:id="@+id/action1"
                android:layout_width="wrap_content"
                android:minWidth="88dp"
                android:background="@color/blue"
                android:layout_height="48dp"
                android:layout_margin="8dp"
                android:padding="6dp"
                android:fontFamily="Roboto"
                android:text="BUTTON1" />

            <com.gc.materialdesign.views.ButtonFlat
                android:id="@+id/action2"
                android:layout_toEndOf="@id/action1"
                android:layout_width="wrap_content"
                android:minWidth="88dp"
                android:background="@color/blue"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:padding="6dp"
                android:fontFamily="Roboto"
                android:text="BUTTON2" />

        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
